chore(storage): redesign forbidden page

--- a/storage/app/public/index.html
+++ b/storage/app/public/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>403 Forbidden</title>
+        <style>body {font-family: Arial, sans-serif;margin: 0;padding: 0;background-color: #f4f4f4;color: #333;}h1 {background-color: #dd4b39;color: #fff;padding: 20px;margin: 0;text-align: center;}p {padding: 20px;margin: 0;text-align: center;}</style>
     </head>
     <body>
-        <h1>403 Forbidden</h1>
-        <p>Access to this resource on the server is denied!</p>
+        <h1>Forbidden</h1>
+        <p>You don't have permission to access this resource.</p>
     </body>
 </html>
